# auto_bilingual_translation

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_server/: __init__.py  server.py  setup_dirs.py  tools.py
video-translator/: skill.md
video-translator/references/: environment_setup.md
video-translator/scripts/: batch_translate.py  process_video.py  process_video_refactored.py  requirements.txt
