[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-bilingual-translation"
version = "0.1.0"
description = "MCP Server for adding bilingual (EN+ZH) subtitles to videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "video", "translation", "subtitles", "bilingual", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "openai-whisper",
    "edge-tts",
    "transformers",
    "torch",
    "sentencepiece",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
bilingual-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
include = ["mcp_server*", "video-translator*"]
